# vapoursynth_image_upscaler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.pyw  run_gui.py  vapoursynth_upscaler.spec
src/vapoursynth_image_upscaler/: __init__.py  __main__.py
src/vapoursynth_image_upscaler/core/: __init__.py  config.py  constants.py  utils.py
src/vapoursynth_image_upscaler/gui/: __init__.py  dependencies_window.py  dialogs.py  main.py  main_window.py  theme.py  worker_thread.py
src/vapoursynth_image_upscaler/worker/: __init__.py  batch_processor.py  main.py  pipeline.py  processor.py  progress.py  settings.py
