[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vapoursynth-image-upscaler"
version = "1.0.0"
description = "A Windows desktop upscaling tool using VapourSynth + vsmlrt (TensorRT backend) with a PySide6 GUI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VapourSynth Image Upscaler Contributors"}
]
keywords = [
    "vapoursynth",
    "super-resolution",
    "upscaling",
    "tensorrt",
    "vsmlrt",
    "image-processing",
    "gui"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "Pillow>=9.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
worker = [
    # VapourSynth dependencies
    # vsjetpack includes vstools, vskernels, vssource and more
    # "vsjetpack",
    # "vsmlrt",
]
rich = [
    "rich>=13.0.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]
all = [
    "vapoursynth-image-upscaler[rich,dev]",
]

[project.scripts]
vs-upscale = "vapoursynth_image_upscaler.__main__:main"

[project.gui-scripts]
vs-upscale-gui = "vapoursynth_image_upscaler.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/vapoursynth_image_upscaler"
Repository = "https://github.com/yourusername/vapoursynth_image_upscaler"
Issues = "https://github.com/yourusername/vapoursynth_image_upscaler/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]

[tool.ruff.lint.isort]
known-first-party = ["vapoursynth_image_upscaler"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "vapoursynth.*",
    "vsjetpack.*",
    "vstools.*",
    "vskernels.*",
    "vsmlrt.*",
    "vssource.*",
    "PySide6.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
